:bug: (blocks/nav) Fix z-index

--- a/app/blocks/nav/nav.scss
+++ b/app/blocks/nav/nav.scss
@@ -39,6 +39,7 @@
 		font-weight: 700;
 		text-align: center;
 		border-bottom: 1px solid #ececec;
+		z-index: 20;
 
 		&:nth-child(5),
 		&:nth-child(6) {
